# friends_trip_bot

./: .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp
algorithm/: DebtSimplifier.cpp  DebtSimplifier.h  GreedyDebtSimplifier.cpp  GreedyDebtSimplifier.h  MinTransactionsSimplifier.cpp  MinTransactionsSimplifier.h
bot/: Bot.cpp  Bot.h  Conversation.cpp  Conversation.h  InternalTypes.h  Scheduler.cpp  Scheduler.h  TelegramTypes.h  ThreadPool.cpp  ThreadPool.h
conversations/: DemoConversation.cpp  DemoConversation.h  ListPaymentsConversation.cpp  ListPaymentsConversation.h  RecordPaymentConversation.cpp  RecordPaymentConversation.h  SimplifyPaymentsConversation.cpp  SimplifyPaymentsConversation.h  TripsConversation.cpp  TripsConversation.h
database/: DatabaseManager.cpp  DatabaseManager.h  DatabaseSchema.cpp  DatabaseSchema.h
handlers/: Handlers.cpp  Handlers.h
repository/: PaymentRepository.cpp  PaymentRepository.h  TripRepository.cpp  TripRepository.h  UserRepository.cpp  UserRepository.h
service/: PaymentService.cpp  PaymentService.h  UserService.cpp  UserService.h
utils/: MoneyAmount.h  utils.h
